# goalgen

./: .gitignore  API_VERSIONING_DESIGN.md  AUTHENTICATION_AUTHORIZATION_DESIGN.md  AZURE_AI_FOUNDRY_BRIDGES.md  AZURE_WORKBOOKS_COST_TRACKING.md  CHANGELOG.md  CLAUDE.md  COMMON_TOOLS.md  CONFIG_SPEC_SCHEMA.md  CONTRIBUTING.md  CONVERSATION_MAPPER_DESIGN.md  CONVERSATION_MAPPER_IMPLEMENTATION.md  DEFECTS.md  DEFECTS_FIXED.md  E2E_GAPS_DISCOVERED.md  E2E_TEST_RESULTS.md  FRAMEWORK_CHOICES.md  GENERATOR_STATUS.md  GIT_SETUP_COMPLETE.md  INCREMENTAL_MODE_IMPLEMENTATION.md  LICENSE  MULTI_AGENT_PATTERNS.md  MULTI_INSTANCE_TOOLS.md  OPEN_SOURCE_READINESS.md  PLANNING_SUMMARY.md  README.md  RELEASE_ANNOUNCEMENT.md  RELEASE_NOTES_v0.2.0-beta.md  ROADMAP_STATUS.md  RUNTIME_GAPS_STATUS.md  SPEC_VALIDATION.md  TEAMS_BOT_TESTING_GUIDE.md  TEAMS_CONVERSATION_DESIGN.md  TEAMS_GENERATOR_COMPLETE.md  TESTING_FRAMEWORKS.md  TOPOLOGY_INFERENCE.md  V0.2.0_BETA_PROGRESS.md  V0.2.0_SUMMARY.md  goalgen.py  manifest.py  (+4 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
docs/: AGENT_SAFETY.md  BOT_WRAPPER_PATTERN.md  INTEGRATION_PLAN.md  TRACING_INTEGRATION_SUMMARY.md  TRACING_TEST_RESULTS.md
docs/advanced/: CORE_SDK_ARCHITECTURE.md  LANGGRAPH_AI_FOUNDRY_OBSERVABILITY.md  LANGGRAPH_STATEMANAGER_INTEGRATION.md
docs/design/: COMPONENT_CONFIG_INVENTORY.md  CONFIGURATION_MATRIX.md  CONVERSATION_MANAGEMENT_DESIGN.md  EVALUATOR_FRAMEWORK_OPTIONS.md  STATE_MANAGEMENT_DESIGN.md  TESTING.md
docs/history/: AGENT_SAFETY_SUMMARY.md  DAY1_COMPLETION_SUMMARY.md  E2E_GAPS_DISCOVERED.md  E2E_SUCCESS_REPORT.md  E2E_TEST_COMPLETION_REPORT.md  E2E_TEST_PLAN.md  FEATURE_IMPLEMENTATION_STATUS.md  GAP4_BICEP_VALIDATION_RESULTS.md  GENERATOR_UPDATES_REQUIRED.md  IMPLEMENTATION_STATUS.md  RUNTIME_GAPS_FIXED.md  RUNTIME_TEST_RESULTS.md  TEAMS_BOT_PRODUCTION_READY.md  TEAMS_BOT_SUMMARY.md  TEAMS_GENERATOR_UPDATES.md  TEAMS_IMPLEMENTATION_SUMMARY.md  VALIDATION_SUMMARY.md  VERSION_CONTROL.md
docs/planned_features/: INCREMENTAL_GENERATION.md  SCHEMA_VERSIONING.md  SCHEMA_VERSIONING_IMPLEMENTATION.md  STATE_SCHEMA.md
examples/: travel_planning.json  travel_planning_v2.json
frmk/: README.md  __init__.py  goalgen_conversation_gist.md
frmk/agents/: __init__.py  base_agent.py
frmk/app/: secure_config.py
frmk/conversation/: __init__.py  azure_conversation_tracker.py  datastore.py  factory.py  mapper.py
frmk/core/: __init__.py  ai_foundry_client.py  prompt_loader.py  state_manager.py  tool_registry.py
frmk/infra/: main.bicep
frmk/testing/: __init__.py  bot_utility.py
frmk/tools/: __init__.py  base_tool.py  function_tool.py  http_tool.py  spec_generator.py  sql_tool.py  vectordb_tool.py  websocket_tool.py
frmk/utils/: __init__.py  data_parser.py  logging.py  retry.py  tracing.py
generators/: agents.py  api.py  assets.py  cicd.py  deployment.py  evaluators.py  infra.py  langgraph.py  scaffold.py  security.py  teams.py  tests.py  tools.py  webchat.py
templates/agents/: agent_impl.py.j2
templates/api/: .dockerignore.j2  .env.sample.j2  Dockerfile-cloud.j2  Dockerfile.j2  main.py.j2  requirements.txt.j2
templates/cicd/: deploy.yml.j2
templates/docs/: PROMPT_DEVELOPMENT.md.j2
templates/frmk/: pyproject.toml.j2  setup.py.j2
templates/infra/: main-simple.bicep.j2  main.bicep.j2  parameters.json.j2
templates/langgraph/: checkpointer_adapter.py.j2  quest_builder.py.j2  schema_migrations.py.j2  state_schema.py.j2
templates/prompts/: default_agent.md.j2  (+2 more)
tests/: README.md  conftest.py  pytest.ini  test_tracing_standalone.py
(+53 files in other folders)
