[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goalgen"
version = "0.1.0"
description = "Code generator for multi-agent conversational AI systems using LangGraph and Azure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GoalGen Contributors"}
]
keywords = ["langgraph", "langchain", "code-generator", "azure", "multi-agent", "conversational-ai", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
# For developers who want to run generated projects
runtime = [
    "azure-cosmos>=4.5.0",
    "azure-identity>=1.15.0",
    "azure-monitor-opentelemetry>=1.2.0",
    "azure-search-documents>=11.4.0",
    "azure-storage-blob>=12.19.0",
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "openai>=1.0.0",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

# For running generated SQL tools
sql = [
    "sqlalchemy>=2.0.0",
    "pyodbc>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
]

# For running generated Vector DB tools
vectordb = [
    "pinecone-client>=3.0.0",
    "weaviate-client>=4.0.0",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
]

# For running generated tests
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

# For GoalGen development
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Everything (for full development setup)
all = [
    "goalgen[runtime,sql,vectordb,test,dev]",
]

[project.scripts]
goalgen = "goalgen:main"

[project.urls]
Homepage = "https://github.com/yourorg/goalgen"
Documentation = "https://github.com/yourorg/goalgen/blob/main/CLAUDE.md"
Repository = "https://github.com/yourorg/goalgen"
Issues = "https://github.com/yourorg/goalgen/issues"

[tool.setuptools]
packages = ["generators", "frmk", "frmk.core", "frmk.tools", "frmk.agents", "frmk.checkpointers", "frmk.conversation"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/**/*", "examples/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.coverage.run]
source = ["generators", "frmk"]
omit = ["tests/*", "test_output/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
